all: pick better names for some legacy terminology
I've never wanted my code to be either a reminder or a source of
hurt for others, but it is possible that some older terminology used
in this repository may do just that.  That's a bug we need to fix,
and hopefully this patch does just that.

Reviewed-by: Tom Hromatka <tom.hromatka@oracle.com>
Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/tests/.gitignore
+++ b/tests/.gitignore
@@ -23,7 +23,7 @@ util.pyc
 15-basic-resolver
 16-sim-arch_basic
 17-sim-arch_merge
-18-sim-basic_whitelist
+18-sim-basic_allowlist
 19-sim-missing_syscalls
 20-live-basic_die
 21-live-basic_allow
@@ -39,7 +39,7 @@ util.pyc
 31-basic-version_check
 32-live-tsync_allow
 33-sim-socket_syscalls_be
-34-sim-basic_blacklist
+34-sim-basic_denylist
 35-sim-negative_one
 36-sim-ipc_syscalls
 37-sim-ipc_syscalls_be
