api: add API level 6
API level 6 allows callers to use both the TSYNC and notify APIs at
the same time.  This is due to the TSYNC_ESRCH flag which was added
in Linux v5.7.

This patch also fixes some omissions in seccomp_api_set().

Acked-by: Tom Hromatka <tom.hromatka@oracle.com>
Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -415,10 +415,8 @@ const struct scmp_version *seccomp_version(void);
  *      support for the SCMP_ACT_LOG action
  *      support for the SCMP_ACT_KILL_PROCESS action
  *  4 : support for the SCMP_FLTATR_CTL_SSB filter attrbute
- *  5 : support for the SCMP_ACT_NOTIFY action
- *      support for using seccomp_notify_receive()
- *      support for using seccomp_notify_respond()
- *      support for using seccomp_notify_id_valid()
+ *  5 : support for the SCMP_ACT_NOTIFY action and notify APIs
+ *  6 : support the simultaneous use of SCMP_FLTATR_CTL_TSYNC and notify APIs
  *
  */
 unsigned int seccomp_api_get(void);
