tests: Add tests for Rust bindings
Add the regression tests (1-60) for the libseccomp crate that is
Rust language bindings for the libseccomp library.

You can run the tests as follows:

```sh
$ sed -i "/^AC_INIT/ s/0.0.0/9.9.9/" configure.ac
$ ./autogen.sh
$ ./configure --prefix=$(pwd)/src/.libs --enable-rust
$ make && make install
$ make check-build
$ cd tests && ./regression -m rust
```

Based on: #323

Signed-off-by: Manabu Sugimoto <Manabu.Sugimoto@sony.com>
Signed-off-by: mayank <mayank.mrinal@sony.com>

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -37,4 +37,8 @@ runs:
     shell: bash
   - run: |
       ./autogen.sh
+      # Specify the tentative version of the libseccomp test library because some
+      # functions of the Rust bindings are restricted based on the version.
+      TEST_VERSION=9.9.9
+      sed -i "/^AC_INIT/ s/0.0.0/$TEST_VERSION/" configure.ac
     shell: bash
