--- a/Makefile.am
+++ b/Makefile.am
@@ -41,8 +41,8 @@ AM_MAKEFLAGS_1 =
 AM_MAKEFLAGS_ = ${AM_MAKEFLAGS_0}
 AM_MAKEFLAGS = ${AM_MAKEFLAGS_@AM_V@}
 
-# enable python during distcheck
-AM_DISTCHECK_CONFIGURE_FLAGS = --enable-python
+# enable python and rust during distcheck
+AM_DISTCHECK_CONFIGURE_FLAGS = --enable-python --enable-rust
 
 check-build: all
 	${MAKE} ${AM_MAKEFLAGS} -C src check-build
