--- a/tests/.gitignore
+++ b/tests/.gitignore
@@ -68,3 +68,7 @@ util.pyc
 58-live-tsync_notify
 59-basic-empty_binary_tree
 60-sim-precompute
+/rust/target
+/rust/utils/target
+.crates.toml
+.crates2.json
