--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -1,6 +1,8 @@
-/**
+/*
  * Seccomp Library
  *
+ * Copyright (c) 2021,2022 Microsoft corporation <paulmoore@microsoft.com>
+ * Copyright (c) 2018-2022 Oracle <tom.hromatka@oracle.com>
  * Copyright (c) 2019 Cisco Systems <pmoore2@cisco.com>
  * Copyright (c) 2012,2013 Red Hat <pmoore@redhat.com>
  * Author: Paul Moore <paul@paul-moore.com>
@@ -34,6 +36,24 @@
 #ifdef __cplusplus
 extern "C" {
 #endif
+
+/*! \mainpage libseccomp
+ *
+ * \section intro_sec Introduction
+ *
+ * @c The libseccomp library provides an easy to use, platform independent,
+ * interface to the Linux Kernel's syscall filtering mechanism. The libseccomp
+ * API is designed to abstract away the underlying BPF based syscall filter
+ * language and present a more conventional function-call based filtering 
+ * interface that should be familiar to, and easily adopted by, application
+ * developers.
+ *
+ * View the entire
+ * <a href="https://github.com/seccomp/libseccomp/blob/main/README.md">README</a>
+ * for more information.
+ *
+ * Libseccomp's C APIs are outlined in the @ref APIs "APIs" section.
+ */
 
 /*
  * version information
