--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -24,6 +24,8 @@ description: "Install dependencies and configure libseccomp"
 runs:
   using: "composite"
   steps:
+  - run: sudo apt-get update
+    shell: bash
   - run: sudo apt-get install -y build-essential valgrind clang-tools lcov gperf astyle codespell
     shell: bash
   - run: |
