--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -93,7 +93,8 @@ check_PROGRAMS = \
 	55-basic-pfc_binary_tree \
 	56-basic-iterate_syscalls \
 	57-basic-rawsysrc \
-	58-live-tsync_notify
+	58-live-tsync_notify \
+	59-basic-empty_binary_tree
 
 EXTRA_DIST_TESTPYTHON = \
 	util.py \
@@ -152,7 +153,8 @@ EXTRA_DIST_TESTPYTHON = \
 	54-live-binary_tree.py \
 	56-basic-iterate_syscalls.py \
 	57-basic-rawsysrc.py \
-	58-live-tsync_notify.py
+	58-live-tsync_notify.py \
+	59-basic-empty_binary_tree.py
 
 EXTRA_DIST_TESTCFGS = \
 	01-sim-allow.tests \
@@ -212,7 +214,8 @@ EXTRA_DIST_TESTCFGS = \
 	55-basic-pfc_binary_tree.tests \
 	56-basic-iterate_syscalls.tests \
 	57-basic-rawsysrc.tests \
-	58-live-tsync_notify.tests
+	58-live-tsync_notify.tests \
+	59-basic-empty_binary_tree.tests
 
 EXTRA_DIST_TESTSCRIPTS = \
 	38-basic-pfc_coverage.sh 38-basic-pfc_coverage.pfc \
