api: Add a SCMP_CMP_32BIT flag bit that can be combined with existing comparison operations
Signed-off-by: James Henstridge <james.henstridge@canonical.com>

--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -94,6 +94,9 @@ enum scmp_compare {
 	SCMP_CMP_GT = 6,		/**< greater than */
 	SCMP_CMP_MASKED_EQ = 7,		/**< masked equality */
 	_SCMP_CMP_MAX,
+
+	SCMP_CMP_OPMASK = 0xFFFF,
+	SCMP_CMP_32BIT = 1 << 16,	/**< operation is 32-bit */
 };
 
 /**
