--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -95,7 +95,8 @@ check_PROGRAMS = \
 	57-basic-rawsysrc \
 	58-live-tsync_notify \
 	59-basic-empty_binary_tree \
-	60-sim-precompute
+	60-sim-precompute \
+	61-sim-transactions
 
 EXTRA_DIST_TESTPYTHON = \
 	util.py \
@@ -156,7 +157,8 @@ EXTRA_DIST_TESTPYTHON = \
 	57-basic-rawsysrc.py \
 	58-live-tsync_notify.py \
 	59-basic-empty_binary_tree.py \
-	60-sim-precompute.py
+	60-sim-precompute.py \
+	61-sim-transactions.py
 
 EXTRA_DIST_TESTCFGS = \
 	01-sim-allow.tests \
@@ -218,7 +220,8 @@ EXTRA_DIST_TESTCFGS = \
 	57-basic-rawsysrc.tests \
 	58-live-tsync_notify.tests \
 	59-basic-empty_binary_tree.tests \
-	60-sim-precompute.tests
+	60-sim-precompute.tests \
+	61-sim-transactions.tests
 
 EXTRA_DIST_TESTSCRIPTS = \
 	38-basic-pfc_coverage.sh 38-basic-pfc_coverage.pfc \
