tests: add test 62-sim-arch_transactions
Add a test to verify the logic at the end of db_col_transaction_commit()
properly copies and releases the snapshots from the filter when the
filter length doesn't match the snapshot length.

Signed-off-by: Tom Hromatka <tom.hromatka@oracle.com>
[PM: subj tweak]
Signed-off-by: Paul Moore <paul@paul-moore.com>
Signed-off-by: Tom Hromatka <tom.hromatka@oracle.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -96,7 +96,8 @@ check_PROGRAMS = \
 	58-live-tsync_notify \
 	59-basic-empty_binary_tree \
 	60-sim-precompute \
-	61-sim-transactions
+	61-sim-transactions \
+	62-sim-arch_transactions
 
 EXTRA_DIST_TESTPYTHON = \
 	util.py \
@@ -158,7 +159,8 @@ EXTRA_DIST_TESTPYTHON = \
 	58-live-tsync_notify.py \
 	59-basic-empty_binary_tree.py \
 	60-sim-precompute.py \
-	61-sim-transactions.py
+	61-sim-transactions.py \
+	62-sim-arch_transactions.py
 
 EXTRA_DIST_TESTCFGS = \
 	01-sim-allow.tests \
@@ -221,7 +223,8 @@ EXTRA_DIST_TESTCFGS = \
 	58-live-tsync_notify.tests \
 	59-basic-empty_binary_tree.tests \
 	60-sim-precompute.tests \
-	61-sim-transactions.tests
+	61-sim-transactions.tests \
+	62-sim-arch_transactions.tests
 
 EXTRA_DIST_TESTSCRIPTS = \
 	38-basic-pfc_coverage.sh 38-basic-pfc_coverage.pfc \
