python: Delete python build artifacts prior to distclean
Running make distcheck resulted in the following errors:
	ERROR: files left in build directory after distclean:
	./src/python/seccomp.egg-info/SOURCES.txt
	./src/python/seccomp.egg-info/PKG-INFO
	./src/python/seccomp.egg-info/top_level.txt
	./src/python/seccomp.egg-info/dependency_links.txt
	./src/python/dist/seccomp-2.5.4-py3.11-linux-x86_64.egg
	make[1]: *** [Makefile:812: distcleancheck] Error 1

Delete the seccomp.egg-info and dist directories in the clean-local make
target.

Signed-off-by: Tom Hromatka <tom.hromatka@oracle.com>

--- a/src/python/Makefile.am
+++ b/src/python/Makefile.am
@@ -49,4 +49,4 @@ uninstall-local:
 
 clean-local:
 	[ ${srcdir} = ${builddir} ] || ${RM} -f ${builddir}/seccomp.pyx
-	${RM} -rf seccomp.c build
+	${RM} -rf seccomp.c build dist seccomp.egg-info
