tests: cleanup the individual test log and stats files
Cleanup all of our regression testing artifacts to keep
'make distcheck' happy.

Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -248,4 +248,4 @@ check-build:
 	${MAKE} ${AM_MAKEFLAGS} ${check_PROGRAMS}
 
 clean-local:
-	${RM} -f 00-test *.pyc
+	${RM} -f 00-test *.pyc *.log *.stats
