--- a/libseccomp.pc.in
+++ b/libseccomp.pc.in
@@ -30,3 +30,4 @@ URL: https://github.com/seccomp/libseccomp
 Version: @PACKAGE_VERSION@
 Cflags: -I${includedir}
 Libs: -L${libdir} -lseccomp
+License: LGPL-2.1-only
