--- a/src/python/setup.py.in
+++ b/src/python/setup.py.in
@@ -36,11 +36,14 @@ setup(
 	url = "https://github.com/seccomp/libseccomp",
 	maintainer = "Paul Moore",
 	maintainer_email = "paul@paul-moore.com",
-	license = "LGPLv2.1",
+	license = "LGPL-2.1",
 	platforms = "Linux",
 	ext_modules = cythonize([
 		Extension("seccomp", ["seccomp.pyx"],
-			# unable to handle libtool libraries directly
-			extra_objects=["../.libs/libseccomp.a"]),
+			# Unable to handle libtool libraries directly.  Also note that
+			# python wheel builds cannot use files outside of the build
+			# directory, so libseccomp.a is manually copied into src/python
+			# by Makefile.am
+			extra_objects=["libseccomp.a"]),
 	])
 )
