api: doc: tests: Add SCMP_ACT_TRAPX()
Add a new action macro, SCMP_ACT_TRAPX(), which accepts user-specified
data in the lower 16-bits.  When a userspace signal handler has been
specified, the Linux kernel populates the si_errno field in the siginfo
structure with these lower 16-bits from the trap action.

To maintain backward compatibility, redefine SCMP_ACT_TRAP to map to
SCMP_ACT_TRAPX(0).  This will guarantee that filters that utilize
SCMP_ACT_TRAP will behave identically.

Signed-off-by: Tom Hromatka <tom.hromatka@oracle.com>

--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -365,8 +365,12 @@ struct scmp_arg_cmp {
 #define SCMP_ACT_KILL		SCMP_ACT_KILL_THREAD
 /**
  * Throw a SIGSYS signal
+ *
+ * The Linux kernel supports a 16-bit parameter for the TRAP action, but
+ * libseccomp v2.6.x and older did not support or utilize this parameter.
  */
-#define SCMP_ACT_TRAP		0x00030000U
+#define SCMP_ACT_TRAP		SCMP_ACT_TRAPX(0)
+#define SCMP_ACT_TRAPX(x)	(0x00030000U | ((x) & 0x0000ffffU))
 /**
  * Notifies userspace
  */
