api: add the seccomp notify addfd support
Add support for the seccomp notify addfd feature in the core API. It allows a caller to install fd in target's fd table.

Signed-off-by: Sudipta Pandit <sudpandit@microsoft.com>

--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -405,6 +405,24 @@ struct seccomp_notif_resp {
 	__s32 error;
 	__u32 flags;
 };
+
+#endif
+
+/* seccomp_notif_addfd and ADDFD_FLAG_SETFD was added in kernel v5.10 */
+#ifndef SECCOMP_ADDFD_FLAG_SETFD
+#define SECCOMP_ADDFD_FLAG_SETFD        (1UL << 0)
+struct seccomp_notif_addfd {
+	__u64 id;
+	__u32 flags;
+	__u32 srcfd;
+	__u32 newfd;
+	__u32 newfd_flags;
+};
+#endif
+
+/* Addfd and return it, atomically. ADDFD_FLAG_SEND was added in kernel 5.14 */
+#ifndef SECCOMP_ADDFD_FLAG_SEND
+#define SECCOMP_ADDFD_FLAG_SEND        (1UL << 1)
 #endif
 
 /*
@@ -813,6 +831,18 @@ int seccomp_notify_id_valid(int fd, uint64_t id);
  *
  */
 int seccomp_notify_fd(const scmp_filter_ctx ctx);
+
+/**
+ * Install a file descriptor into the target's process.
+ * @param fd the notification fd
+ * @param addfd the addfd structure
+ *
+ * This function enables the caller to install/add a fd into the
+ * target's fd table. Returns the installed fd number on success and,
+ * negative values on failure.
+ *
+ */
+int seccomp_notify_addfd(int fd, struct seccomp_notif_addfd *addfd);
 
 /**
  * Generate seccomp Pseudo Filter Code (PFC) and export it to a file
